Fixed tweet wrapping issue and date format

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -86,6 +86,7 @@ article > header > div {
 }
 
 article > p {
+  overflow-wrap: break-word;
   align-self: center;
   width: 97%;
   height: auto;
